<resources>
    <string name="app_name">Mascotas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plikes">0</string>
    <string name="pusername">Username</string>

    <string name="action_contacto">Contacto</string>
    <string name="action_acerca">Acerca de</string>
    <string name="action_configurar_cuenta">Configurar cuenta</string>

    <string name="contacto_nombre">Nombre</string>
    <string name="contacto_correo">Corroe</string>
    <string name="contacto_enviar">enviar</string>
    <string name="contacto_comentario">Comentario</string>
    <string name="contacto_nota">Nota</string>

    <string name="dialogo_text01">Mascotas - App API Instagram </string>
    <string name="dialogo_text02">Realizada por Hernan Ramirez</string>
    <string name="dialogo_text03">Actividad Semana 1, curso 4</string>

    <string name="configurar_cuenta_title">Buscar por tag</string>
    <string name="configurar_cuenta_tag">Resultados por Tag</string>
    <string name="configurar_cuenta_boton">Buscar</string>

    <string-array name="tag_arrays">
        <item>mascota</item>
        <item>cafe</item>
    </string-array>

</resources>
