<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ConfigFragmentView">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configurar_cuenta_title"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            />


        <Spinner
            android:id="@+id/spinnerTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/tag_arrays"
            />

        <Button
            android:id="@+id/bntConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurar_cuenta_boton" />

        <TextView
            android:id="@+id/tvTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configurar_cuenta_tag"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTagMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</FrameLayout>